# financial_data_pipeline

./: Cargo.toml  readme.md
.context/: context.md  high_volume.md  jul_20_progress.md  jul_22_progress.md  module_1.md  module_2.md  module_3.md  project_context.md  project_structure_full.md
src/: lib.rs  main.rs  market_data.rs
src/models/: market_tick.rs  mod.rs
src/processor/: aggregator.rs  channels.rs  hub.rs  mod.rs
