[package]
name = "financial_data_pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.4"


